--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <title>Table</title>
 </head>
 <body>
-    
+    <h1>Students in the course</h1>
+    <table border="1">
+        <caption>SMR students</caption>
+        <tr>
+            <th>Name</th>
+            <th>Surname</th>
+            <th>Age</th>
+        </tr>
+        <tr>
+            <td>Paula</td>
+            <td>Nogueira Figueiras</td>
+            <td>20</td>
+        </tr>
+        <tr>
+            <td>Jose</td>
+            <td>Cernadas Couto</td>
+            <td>23</td>
+        </tr>
+        <tr>
+            <td>Maria</td>
+            <td>Cartuñas Souto</td>
+            <td>19</td>
+        </tr>
+    </table>
 </body>
 </html>
