--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 <body>
     <h1>Students in the course</h1>
     <table border="1">
+        <thead>
         <caption>SMR students</caption>
         <tr>
             <th>Name</th>
             <th>Surname</th>
             <th>Age</th>
         </tr>
+        </thead>
+        <tbody>
         <tr>
             <td>Paula</td>
             <td>Nogueira Figueiras</td>
@@ -29,6 +32,11 @@
             <td>Cartuñas Souto</td>
             <td>19</td>
         </tr>
+        </tbody>
+        <tfoot>
+            <th colspan="2">Number of students</th>
+            <th>3</th>
+        </tfoot>
     </table>
 </body>
 </html>
